Adds a little bit of style

--- a/example/index.html
+++ b/example/index.html
@@ -3,6 +3,33 @@
 <head>
 	<title>iOS 	App Switcher jQuery Plugin by Ryan Scherf</title>
 
+	<style type="text/css">
+	body {
+		font-family: sans-serif;
+		font-size: 1.4em;
+		background: url(http://666a658c624a3c03a6b2-25cda059d975d2f318c03e90bcf17c40.r92.cf1.rackcdn.com/unsplash_52cd2d19237cd_1.JPG) no-repeat center 0;
+		background-size: cover;
+	}
+
+	.social-by-url,
+	.social-by-data {
+		display: block;
+		background: rgba(0,0,0,.5);
+		text-align: center;
+		margin-bottom: 40px;
+		margin: 10% 20% 40px 20%;
+		padding: 30px;
+	}
+
+	.social-by-url a,
+	.social-by-data a {
+		text-decoration: none;
+		color: #fff;
+		display: inline-block;
+		margin-right: 20px;
+	}
+	</style>
+
 	<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
 	<script type="text/javascript" src="../source/jquery.switcher.js"></script>
 
