Adds LinkedIn to defaults and fixes logic

--- a/example/index.html
+++ b/example/index.html
@@ -74,6 +74,7 @@
 		<a href="http://instagram.com/ryanscherf" data-username="ryanscherf">Instagram</a>
 		<a href="http://facebook.com/ryanscherf" data-username="ryanscherf">Facebook</a>
 		<a href="http://quirky.com/ryanscherf" data-username="ryanscherf">Quirky</a>
+		<a href="http://linkedin.com/ryanscherf" data-username="10998304">LinkedIn</a>
 	</div>
 
 </body>
