--- a/example/index.html
+++ b/example/index.html
@@ -75,6 +75,7 @@
 		<a href="http://facebook.com/ryanscherf" data-username="ryanscherf">Facebook</a>
 		<a href="http://quirky.com/ryanscherf" data-username="ryanscherf">Quirky</a>
 		<a href="http://linkedin.com/ryanscherf" data-username="10998304">LinkedIn</a>
+		<a href="http://ryan.sc" data-username="nothing">No app installed</a>
 	</div>
 
 </body>
