Adds routing for Fam.

--- a/example/index.html
+++ b/example/index.html
@@ -65,7 +65,6 @@
 		<a href="http://twitter.com/ryanscherf">Twitter</a>
 		<a href="http://instagram.com/ryanscherf">Instagram</a>
 		<a href="http://facebook.com/ryanscherf">Facebook</a>
-		<a href="http://quirky.com/ryanscherf">Quirky</a>
 		<a href="http://mycustomapp.com/ryanscherf">Custom App</a>
 	</div>
 
@@ -73,7 +72,7 @@
 		<a href="http://twitter.com/ryanscherf" data-username="ryanscherf">Twitter</a>
 		<a href="http://instagram.com/ryanscherf" data-username="ryanscherf">Instagram</a>
 		<a href="http://facebook.com/ryanscherf" data-username="ryanscherf">Facebook</a>
-		<a href="http://quirky.com/ryanscherf" data-username="ryanscherf">Quirky</a>
+		<a href="http://getfam.com/" data-username="">Fam</a>
 		<a href="http://linkedin.com/ryanscherf" data-username="10998304">LinkedIn</a>
 		<a href="http://ryan.sc" data-username="nothing">No app installed</a>
 	</div>
